# HurryUp_Agent

./: .gitignore  New_HurryUp_Agent.sln  README.md
Src/: Build.sln  CMakeLists.txt
Src/HurryUp_Agent/: CCollector.cpp  CCollector.h  CCommunication.cpp  CCommunication.h  CDevice.cpp  CDevice.h  CEnvironment.cpp  CEnvironment.h  CExecutor.cpp  CExecutor.h  CInspection.cpp  CInspection.h  CMatch.cpp  CMatch.h  CMessage.cpp  CMessage.h  CModule.cpp  CModule.h  CMonitoring.cpp  CMonitoring.h  CPolicy.cpp  CPolicy.h  CUtils.cpp  CUtils.h  HurryUp_Agent.vcxproj  main.cpp  protocol.h  stdafx.h
